components/Footer/footer.scss
.footer {
  background-color: #F2F2F2;
  padding: 36px 0;

  &__wrapper {
    display: flex;
    justify-content: space-between;
    align-items: flex-end; 

    @media (max-width: 768px) {
      flex-direction: column;
      align-items: center;
    }
  }

  &__content {
    display: flex;
    gap: 56px;

    @media (max-width: 768px) {
      flex-direction: column;
    }
  }

  &__contact-wrapper {
    align-items: center;
    display: flex;
    gap: 56px;
  }

  &__section {
    display: flex;
    flex-direction: column;
  }

  &__text {
    text-transform: uppercase;
    letter-spacing: 0.18px;
    font-size: 14px;
    font-weight: medium;
    line-height: 22px;
    cursor: pointer;
    margin: 0;
    color: inherit;
    text-decoration: none;

    @media (max-width: 768px) {
      align-self: center;
    }
  }

  &__copyright {
    @media (max-width: 768px) {
      margin-top: 32px;
    }
  }
}

